[package]
name = "libpam-sys"
version = "0.1.0"
edition = "2021"
links = "pam"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

linux-pam = []
openpam = []

read_cooked_lines = ["openpam", "libc"]

[dependencies]
libc = { version = "^0.2", optional = true }

[build-dependencies]
pkg-config = "^0.3"
libloading = "^0.7"
